# arga-backend

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Containerfile  Containerfile.migrator  README.md  devenv.nix  devenv.yaml  diesel.toml  flake.nix  rustfmt.toml
core/: Cargo.toml  Containerfile.migrator  README.md  atlas.hcl  diesel.toml  schema.sql
core/core-derive/: Cargo.toml
core/core-derive/src/: lib.rs
core/migrations/: 20250605060808_initial.sql  20250605084357_drop_legacy_tables.sql  20250606063639_create_baseline_views.sql  20250606073231_refactor_specimens.sql  20250610073021_recreate_specimen_views.sql  20250610085214_create_organism_and_accession_event_logs.sql  20250613034828_add_uniqueness_constraint_to_dataset_versions.sql  20250613054532_add_specimen_entities_views.sql  20250625114457_add-breakdown-stats-to-specimen-stats.sql  20250709034536_add-session-id-to-users.sql  20250903102540_create_tissues.sql  20250903105546_create_tissue_logs.sql  20250903112316_create_tissue_entities.sql  20250908064442_add_tissue_id.sql  20250909051844_refactor_subsamples_and_extracts.sql  20250909073111_create_subsample_logs_and_extraction_logs.sql  20250912065735_create_agent_logs.sql  20250920051119_less-restrictive-publications.sql  20250920053610_create_publication_entities.sql  20250922083337_add_live_state_fields_to_organisms.sql  20250923023454_create_libraries.sql  20250925095743_create_sequence_runs_and_assemblies.sql  20250927052046_add_entity_id_to_names.sql  20250929043505_create_library_assemblies.sql  20251001124402_add_genbank_assembly_fields.sql  20251003065225_create_data_products.sql  20251003065608_create_data_product_logs.sql  20251009001851_add_id_text_fields_to_collection_specimens.sql  20251125051814_create_annotations.sql  20251204045946_create_depositions.sql  20251213052245_add_more_stats_to_assemblies.sql  20251213060649_change_asm_stat_totals_to_bigint.sql  20251215043057_create_projects.sql  20251215043226_change_projects_string_arr_to_text_arr.sql  20251215050737_create_project_logs.sql  20251215101021_add_more_annotation_stats.sql  atlas.sum
core/migrations/00000000000001_create_sources/: up.sql
core/migrations/00000000000002_create_datasets/: up.sql
core/migrations/00000000000003_create_names/: down.sql  up.sql
core/migrations/00000000001001_create_specimens/: up.sql
core/migrations/00000000001002_create_subsamples/: down.sql  up.sql
core/migrations/00000000001003_create_dna_extracts/: down.sql  up.sql
core/migrations/00000000001004_create_sequences/: up.sql
core/migrations/00000000001005_create_collection_events/: down.sql  up.sql
core/migrations/00000000001006_create_accession_events/: down.sql  up.sql
core/migrations/00000000001007_create_subsample_events/: up.sql
core/migrations/00000000001008_create_dna_extraction_events/: down.sql  up.sql
core/migrations/00000000001009_create_sequencing_events/: down.sql  up.sql
core/migrations/00000000001010_create_assembly_events/: up.sql
core/migrations/00000000001011_create_annotation_events/: up.sql
core/migrations/00000000001012_create_deposition_events/: down.sql  up.sql
core/migrations/00000000002001_create_name_data_summaries/: down.sql  up.sql
core/migrations/00000000002002_create_name_attributes/: up.sql
core/migrations/00000000002002_create_taxon_history/: down.sql  up.sql
core/migrations/00000000002004_taxa_dag/: down.sql  up.sql
core/migrations/00000000002005_create_species_view/: up.sql
core/migrations/00000000002006_taxon_photos/: down.sql  up.sql
core/migrations/00000000003000_create_vernacular_names/: up.sql
core/migrations/00000000003001_create_taxa/: down.sql  up.sql
core/migrations/00000000003001_create_vernacular_names/: down.sql  up.sql
core/migrations/00000000003002_create_taxon_history/: up.sql
core/migrations/00000000003003_create_taxon_names/: down.sql  up.sql
core/migrations/00000000003004_create_taxa_dag_view/: up.sql
core/migrations/00000000003005_create_species_view/: down.sql  up.sql
core/migrations/2023-03-22-092543_create_user_taxa_lists/: up.sql
core/migrations/2023-03-22-093448_create_user_taxa/: down.sql
core/migrations/2023-03-27-020631_create_users/: up.sql
core/migrations/2023-04-04-011810_create_jobs/: up.sql
core/migrations/2023-05-05-051958_create_ibra_geometry/: up.sql
core/migrations/2023-05-05-124325_create_names/: up.sql
core/migrations/2023-05-06-153604_create_vernacular_names/: down.sql  up.sql
core/migrations/2023-05-23-055802_create_regions/: down.sql  up.sql
core/migrations/2023-05-23-074330_create_taxon_photos/: up.sql
core/migrations/2023-05-26-033353_create_name_lists/: up.sql
core/migrations/2023-05-26-052347_create_conservation_statuses/: down.sql  up.sql
core/migrations/2023-05-31-071814_add_specimen_name_list_type/: up.sql
core/migrations/2023-05-31-073347_create_specimens/: up.sql
core/migrations/2023-05-31-131413_create_imcra_provincial/: up.sql
core/migrations/2023-06-14-052753_add_priority_to_taxa_list/: up.sql
core/migrations/2023-06-14-065816_create_imcra_mesoscale/: down.sql  up.sql
core/migrations/2023-06-15-045143_create_assemblies/: down.sql  up.sql
core/migrations/2023-06-15-131853_create_assembly_stats/: down.sql  up.sql
core/migrations/2023-06-15-131854_create_biosamples/: down.sql
core/migrations/2023-07-02-061122_add_specimen_collection_details/: down.sql  up.sql
core/src/: lib.rs  models.rs  schema.rs  schema_gnl.rs  search.rs  telemetry.rs
server/: Cargo.toml  Containerfile  compose.yaml
server/insomnia/: ala_backend.json  arga_backend.json
server/src/: lib.rs  main.rs
src/: features.rs  (+6 more)
tasks/: Cargo.toml
tasks/src/: admin.rs  dataset.rs  main.rs
web/: Cargo.toml  Dioxus.toml  flake.nix  input.css
web/assets/: main.css
web/src/: main.rs
workers/: Cargo.toml
workers/src/: conservation_status_importer.rs  error.rs  main.rs  manager.rs  marker_importer.rs  region_importer.rs  specimen_importer.rs  synonym_importer.rs  taxa_importer.rs  threaded_job.rs  vernacular_importer.rs
(+679 files in other folders)
