[package]
name = "arga-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
argon2 = { version = "0.5.0", features = ["zeroize"] }
async-graphql = { version = "5.0.5", features = ["tracing", "tokio"] }
async-graphql-axum = "5.0.5"
async-trait = "0.1.64"
axum = { version = "0.6.4", features = ["macros", "multipart"] }
axum-login = "0.4.1"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.1.13", features = ["derive"] }
csv = "1.2.2"
diesel = { version = "2.0.3", features = ["uuid", "serde_json", "chrono", "postgres", "r2d2"] }
diesel-async = { version = "0.2.0", features = ["postgres", "bb8"] }
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
dotenvy = "0.15.6"
eyre = "0.6.8"
flume = "0.10.14"
futures = "0.3.26"
geo-types = "0.7.9"
geojson = "0.24.0"
geozero = { version = "0.9.9", features = ["with-postgis-diesel", "with-geojson", "postgres-types", "with-postgis-postgres"] }
heck = "0.4.1"
hyper = "0.14.23"
opentelemetry = { version = "0.18.0", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0", features = ["metrics"] }
polars = { version = "0.29.0", features = ["lazy", "rows", "streaming", "parquet"] }
rayon = "1.7.0"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
stakker = { version = "0.2.6", features = ["logger"] }
tantivy = "0.19.2"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
tokio-postgres = "0.7.7"
tokio-postgres-rustls = "0.9.0"
tokio-util = { version = "0.7.7", features = ["io"] }
tower-http = { version = "0.3.5", features = ["cors", "trace", "limit"] }
tracing = "0.1.37"
tracing-opentelemetry = { version = "0.18.0", features = ["metrics"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.3.1"
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["tokio", "async_tokio"] }

# [[bench]]
# name = "sample_attributes"
# harness = false
