[workspace]
resolver = "2"

members = [
  "core",
  "core/core-derive",
  "server", "web",
  # "workers",
  "tasks",
]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


#[profile.dev]
#opt-level = 1

#[profile.dev.package."*"]
#opt-level = 3
