[package]
name = "arga-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
telemetry = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry-semantic-conventions", 
    "tracing-opentelemetry",
    "opentelemetry_sdk",
    "tracing-subscriber"
]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.4", features = ["uuid", "numeric", "serde_json", "chrono", "postgres", "64-column-tables", "r2d2"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
geo-types = "0.7.9"
geojson = "0.24.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
tantivy = "0.19.2"
thiserror = "1.0.38"
tracing = "0.1.37"
bigdecimal = { version = "0.4.1", features = ["serde"] }
strum = { version = "0.26.3", features = ["derive"] }
core-derive = { version = "0.1.0", path = "core-derive" }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

# OpenTelemetry dependencies for shared telemetry
opentelemetry = { version = "0.30", optional = true }
opentelemetry-otlp = { version = "0.30", features = ["trace", "grpc-tonic"], optional = true }
opentelemetry-semantic-conventions = { version = "0.30", optional = true }
tracing-opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"], optional = true }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"], optional = true }
