[package]
name = "arga-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arga-core = { path = "../core" }

anyhow = "1.0.68"
async-graphql = { version = "7.0.17", features = ["tracing", "tokio", "uuid", "chrono", "graphiql"] }
async-graphql-axum = "7.0.17"
async-trait = "0.1.64"
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-login = "0.17.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.9", features = ["uuid", "numeric", "serde_json", "chrono", "postgres", "r2d2"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
dotenvy = "0.15.6"
eyre = "0.6.8"
futures = "0.3.26"
geo-types = "0.7.9"
geojson = "0.24.0"
geozero = { version = "0.9.9", features = ["with-postgis-diesel", "with-geojson", "postgres-types", "with-postgis-postgres"] }
hyper = "0.14.23"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.19.2"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io"] }
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace", "limit", "timeout", "sensitive-headers"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.3.1"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
bigdecimal = { version = "0.4.1", features = ["serde"] }
csv = "1.3.1"
brotli2 = "0.3.2"
base64 = "0.22.1"
tower-sessions = { version = "0.14.0", features = ["signed"] }
secrecy = "0.10.3"
password-auth = "1.0.0"
time = "0.3.41"
tower = "0.5.2"
hyper-util = { version = "0.1.16", features = ["client", "client-legacy"] }
