[package]
name = "arga-tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arga-core = { path = "../core" }

chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.0", features = ["uuid", "serde_json", "chrono", "postgres", "r2d2"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.2.2", features = ["serde", "v4"] }

thiserror = "1.0.38"
clap = { version = "4.1.13", features = ["derive"] }
anyhow = "1.0.68"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
dotenvy = "0.15.6"
tantivy = "0.19.2"
memchr = "2.5.0"
memmap2 = "0.7.1"
quick-xml = "0.30.0"
rayon = "1.7.0"
indicatif = { version = "0.17.6", features = ["rayon"] }
csv = "1.2.2"
latlon = "0.1.3"
blake3 = { version = "1.5.0" }
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
bigdecimal = { version = "0.4.1", features = ["serde"] }
password-auth = "1.0.0"
