[package]
name = "web"
version = "0.1.0"
authors = ["Goran Sterjov <goran.sterjov@csiro.au>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = [] }
dioxus-html = { version = "0.6.3", features = ["serialize"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
web-sys = "0.3.77"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
