[package]
name = "arga-workers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arga-core = { path = "../core" }

chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.1.0", features = ["uuid", "serde_json", "chrono", "postgres", "r2d2"] }
diesel-async = { version = "0.3.2", features = ["postgres", "bb8"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.2.2", features = ["serde", "v4"] }

csv = "1.2.2"
flume = "0.10.14"
latlon = "0.1.3"
itertools = "0.11.0"
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
dotenvy = "0.15.6"
rayon = "1.7.0"
stakker = { version = "0.2.6" }
tokio = { version = "1.24.2", features = ["full"] }
regex = "1.9.3"
once_cell = "1.18.0"
